# statistic-bot

./: .gitignore  README.md  manage.py  pyproject.toml
app/: parser.py
app/services/: deploy_tool.py  get_data.py  logs.py  mysql_tools.py  telegram_tools.py  test.py
statistic_bot/services/: logs.py  parser.py  parsre.py  stats.py  telegram_client.py  telegram_tools.py
