[tool.poetry]
name = "statistic-bot"
version = "0.0.1"
description = ""
authors = ["Adrian Makridenko <maccree.a@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.3"
requests = "^2.31.0"
telethon = "^1.29.3"
python-dotenv = "^1.0.0"
selenium = "^4.12.0"
undetected-chromedriver = "^3.5.3"
undetected-chromedriver2 = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
