[tool.poetry]
name = "statistic-bot"
version = "2.0.0"
description = ""
authors = ["Adrian Makridenko <maccree.a@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.29.3"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
